# bibleverse

./: .gitignore  README.md  package-lock.json  pyproject.toml  run_pipeline.py  test_browser.js
.github/workflows/: deploy.yml
pipeline/: compute_embeddings.py  compute_metrics.py  compute_passages.py  compute_search.py  compute_sphere.py  config.py  extract_entities.py  fetch_bsb.py  fetch_data.py
site/: complexity.html  index.html  manifest.json  map.html  network.html
site/css/: style.css
site/data/: bsb_verses.json  graph.json  hapax.json  heatmap.json  metrics.json  neighbors.json  passage_meta.json  search_meta.json  umap_coords.json
site/js/: common.js  complexity.js  hero.js  map.js  network.js
site/model/: config.json  tokenizer.json  tokenizer_config.json
site/model/onnx/: model_quantized.onnx
worker/: index.js  wrangler.toml
